# code-adventures

./: .clang-format  .gitignore  .gitmodules  .prettierrc.json  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
public/scenes/: bunny.json  cube.json  triangle.json
public/scenes/learnOpenGL/: 1-triangle.json  2-textures.json  3-coordinates.json  4-camera.json  5-depthTesting.json  5-materials.json  6-blending.json  6-lightMaps.json  6_1-lightmaps-emission.json  7-multipleLights.json  8-depthTesting.json  9-blending.json  triangle.json
public/shaders/learnOpenGL/: basicTexture.wgsl  cube.wgsl  cubeMultipleLights.wgsl  depthTesting.wgsl  lightmaps.wgsl  lightmapsEmission.wgsl  materials.wgsl  textures.wgsl  transparentTexture.wgsl  triangle.wgsl
src/: App.svelte  app.css  global.d.ts  main.ts  renderer2D.ts
src/algorithms/computationalGeometry/: convexHull2D.ts
src/animation/: controller.ts
src/components/: CameraEditor.svelte  Component.svelte  FloatInput.svelte  GeometryComponent.svelte  MaterialEditor.svelte  OrthographicCameraEditor.svelte  PageList.svelte  Resizer.svelte  Section.svelte  TransformEditor.svelte  TreeNode.svelte  TreeView.svelte  Vec3Input.svelte  WebGPUScene.svelte
src/components/geometry/: BufferGeometryComponent.svelte  ClusterGeometryComponent.svelte
src/cpp/: CMakeLists.txt  conanfile.txt
src/cpp/assets/shaders/: basic_texture.glsl
src/cpp/projects/: CMakeLists.txt
src/cpp/projects/ecs/: CMakeLists.txt
src/cpp/projects/ecs/assets/shaders/: bunny.glsl
src/cpp/projects/ecs/src/: main.cpp
src/cpp/projects/engine2d/: CMakeLists.txt
src/cpp/projects/engine2d/src/: main.cpp
src/cpp/projects/hello-world/: CMakeLists.txt  README.md
src/cpp/projects/imgui/: CMakeLists.txt
src/cpp/projects/imgui/src/: main.cpp
src/cpp/projects/learn-opengl/: CMakeLists.txt
src/cpp/projects/learn-opengl/assets/shaders/: cube.frag  cube.vert  depth_testing.glsl  framebuffer_scene.glsl  light_casters.glsl  lighting_maps.frag  lighting_maps.vert  model_shader.glsl  multiple_lights.glsl  phong.frag  phong.vert  phong_materials.frag  quad.glsl
src/cpp/projects/learn-opengl/src/: assimp_models.h  basic_lighting.h  camera.h  colors.h  coordinate_systems.h  defines.h  depth_testing.h  framebuffers.h  geometry.h  hello_triangle.h  light_casters.h  lighting_maps.h  main.cpp  materials.h  multiple_lights.h  shaders.h  textures.h  transformations.h  tutorial.h
src/cpp/projects/noise/: CMakeLists.txt
src/cpp/projects/noise/src/: main.cpp
src/cpp/projects/opengl/: CMakeLists.txt
src/cpp/projects/opengl/src/: main.cpp
src/cpp/projects/orbit-controls/: CMakeLists.txt
src/cpp/projects/orbit-controls/src/: main.cpp
src/cpp/projects/voxelization/: CMakeLists.txt
src/cpp/projects/voxelization/src/: main.cpp
src/cpp/tests/: CMakeLists.txt  test_glm.cpp  test_noise_generator.cpp
src/cpp/toolkit/: CMakeLists.txt  defines.h
src/cpp/toolkit/engine/: buffer_layout.cpp  buffer_layout.h  engine.cpp  engine.h  frame_time.cpp  frame_time.h  imgui_renderer.cpp  imgui_renderer.h  index_buffer.cpp  layer.h  opengl_renderer.cpp  opengl_renderer.h  props.h  render_command.cpp  render_command.h  renderer.cpp  shader_data_type.h  time.cpp  time.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h
src/cpp/toolkit/engine/camera/: camera.h  camera_controller.cpp  camera_controller.h  camera_controller2d.cpp  camera_controller2d.h  free_camera_controller.cpp  free_camera_controller.h  orbit_camera_controller.cpp  orbit_camera_controller.h  orthographic_camera.cpp  orthographic_camera.h  orthographic_camera2d.cpp  orthographic_camera2d.h  perspective_camera.cpp  perspective_camera.h
src/cpp/toolkit/engine/ecs/: components.h  entity.h  scene.cpp  scene.h
src/cpp/toolkit/engine/events/: events.h  input.cpp  input.h  key_codes.h  mouse_codes.h
src/cpp/toolkit/engine/models/: geometry.h  mesh.cpp  mesh.h  model.cpp  model.h  model_loader.cpp  model_loader.h
src/cpp/toolkit/engine/rendering/: defines.h  framebuffer.cpp  framebuffer.h  index_buffer.cpp  index_buffer.h  opengl_errors.h  opengl_renderer.cpp  opengl_renderer.h  render_command.cpp  render_command.h  renderer.cpp  renderer.h  renderer2d.cpp  renderer2d.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/cpp/toolkit/engine/ui/: imgui_renderer.cpp  imgui_renderer.h  scene_heirarchy_panel.cpp  scene_heirarchy_panel.h
src/cpp/toolkit/geometry/: geometry.h  voxel_octree.cpp  voxel_octree.h
src/cpp/toolkit/include/toolkit/: engine.h  geometry.h  logger.h  math.h  noise.h  voxel.h
src/cpp/toolkit/logger/: assert.h  log.h
src/cpp/toolkit/math/: box.cpp  box.h  intersection.cpp  intersection.h  math.cpp  math.h
src/cpp/toolkit/noise/: noise_generator.cpp  noise_generator.h
src/cpp/toolkit/voxel/: voxelization.cpp  voxelization.h
src/math/: random.ts  range.ts  vec2.ts
src/models/: camera.ts  geometry.ts
src/pages/: Home.svelte  index.ts
src/pages/advanced/: index.svelte  pages.ts
src/pages/components/: PageList.svelte  Section.svelte
src/pages/computationalGeometry/: ConvexHull2DAnimation.svelte  ConvexHull2DCompute.svelte  index.svelte  pages.ts
src/pages/computerGraphics/: Meshlets.svelte  MoanaIsland.svelte  index.svelte  pages.ts
src/pages/moanaIsland/: MoanaIsland.svelte  index.svelte  pages.ts
src/pages/voxelization/: Voxelization.svelte  index.svelte  pages.ts
src/pages/wasm/: WasmGameOfLife.svelte  index.svelte  pages.ts
src/pages/webgpu/: Bunny.svelte  index.svelte  pages.ts
src/sh/: Makefile  README.md  docker-compose.yml
src/toolkit/: array.ts  callbacks.ts  colour.ts  network.ts  sceneBoundingBox.ts  signal.ts  stateMachine.ts  stats.ts  subscription.ts  voxelization.ts
src/types/: global.d.ts  points.ts  sceneGraph.ts
src/web/: package.json  tsconfig.json  webpack.config.js
tools/: CMakeLists.txt
tools/meshopt/: CMakeLists.txt  main.cpp
wasm/game-of-life/: Cargo.toml
(+147 files in other folders)
